[project]
name = "kovo-cli"
version = "0.1.0"
description = "Kovo — free-tier security scanner CLI"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = ["httpx>=0.27"]

[project.scripts]
kovo = "kovo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["kovo"]
