[project]
name = "kobo-scan"
version = "0.1.6"
description = "Kobo — free-tier security scanner CLI"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = ["httpx>=0.27"]

[project.scripts]
kobo = "kobo:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["kobo"]
